// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.stream() emits content logprobs events 1`] = `
"data: {\\"id\\":\\"chatcmpl-123\\",\\"object\\":\\"chat.completion.chunk\\",\\"created\\":1704805200,\\"model\\":\\"gpt-4o-2024-08-06\\",\\"choices\\":[{\\"index\\":0,\\"delta\\":{\\"role\\":\\"assistant\\",\\"content\\":\\"{\\\\\\"city\\\\\\":\\\\\\"San Francisco\\\\\\",\\\\\\"units\\\\\\":\\\\\\"c\\\\\\"}\\"},\\"logprobs\\":{\\"content\\":[{\\"token\\":\\"{\\",\\"logprob\\":-0.0036115935,\\"bytes\\":[123,34],\\"top_logprobs\\":[]}]},\\"finish_reason\\":null}]}

data: {\\"id\\":\\"chatcmpl-123\\",\\"object\\":\\"chat.completion.chunk\\",\\"created\\":1704805200,\\"model\\":\\"gpt-4o-2024-08-06\\",\\"choices\\":[{\\"index\\":0,\\"delta\\":{},\\"logprobs\\":null,\\"finish_reason\\":\\"stop\\"}]}

data: [DONE]"
`;

exports[`.stream() emits refusal logprobs events 1`] = `
"data: {\\"id\\":\\"chatcmpl-123\\",\\"object\\":\\"chat.completion.chunk\\",\\"created\\":1704805200,\\"model\\":\\"gpt-4o-2024-08-06\\",\\"choices\\":[{\\"index\\":0,\\"delta\\":{\\"role\\":\\"assistant\\",\\"refusal\\":\\"I'm truly sorry, but I can't assist with that request.\\"},\\"logprobs\\":{\\"content\\":null,\\"refusal\\":[{\\"token\\":\\"I'm\\",\\"logprob\\":-0.0018297503,\\"bytes\\":[73,39,109],\\"top_logprobs\\":[]}]},\\"finish_reason\\":null}]}

data: {\\"id\\":\\"chatcmpl-123\\",\\"object\\":\\"chat.completion.chunk\\",\\"created\\":1704805200,\\"model\\":\\"gpt-4o-2024-08-06\\",\\"choices\\":[{\\"index\\":0,\\"delta\\":{},\\"logprobs\\":null,\\"finish_reason\\":\\"stop\\"}]}

data: [DONE]"
`;

exports[`.stream() handles audio responses with expires_at 1`] = `
"data: {\\"id\\":\\"chatcmpl-123\\",\\"object\\":\\"chat.completion.chunk\\",\\"created\\":1704805200,\\"model\\":\\"gpt-4o-audio-preview\\",\\"choices\\":[{\\"index\\":0,\\"delta\\":{\\"role\\":\\"assistant\\",\\"audio\\":{\\"id\\":\\"audio-123\\",\\"data\\":\\"base64audio...\\",\\"expires_at\\":1704805200,\\"transcript\\":\\"Hello, this is a test response.\\"}},\\"finish_reason\\":null}]}

data: {\\"id\\":\\"chatcmpl-123\\",\\"object\\":\\"chat.completion.chunk\\",\\"created\\":1704805200,\\"model\\":\\"gpt-4o-audio-preview\\",\\"choices\\":[{\\"index\\":0,\\"delta\\":{},\\"finish_reason\\":\\"stop\\"}]}

data: [DONE]"
`;

exports[`.stream() works 1`] = `
"data: {\\"id\\":\\"chatcmpl-123\\",\\"object\\":\\"chat.completion.chunk\\",\\"created\\":1704805200,\\"model\\":\\"gpt-4o-2024-08-06\\",\\"choices\\":[{\\"index\\":0,\\"delta\\":{\\"role\\":\\"assistant\\",\\"content\\":\\"{\\\\\\"city\\\\\\":\\\\\\"San Francisco\\\\\\",\\\\\\"units\\\\\\":\\\\\\"c\\\\\\"}\\"},\\"finish_reason\\":null}]}

data: {\\"id\\":\\"chatcmpl-123\\",\\"object\\":\\"chat.completion.chunk\\",\\"created\\":1704805200,\\"model\\":\\"gpt-4o-2024-08-06\\",\\"choices\\":[{\\"index\\":0,\\"delta\\":{},\\"finish_reason\\":\\"stop\\"}]}

data: [DONE]"
`;
